--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -68,8 +68,8 @@
 		</div>
 	</div>
 	<div class="box-two" fxLayout="row" fxLayoutAlign="space-around center">
-		<div style="width: 20%; height: 80%;">
-			<span>Pacotes</span>
+		<div class="places-info">
+			
 		</div>
 		<div style="width: 40%; height: 80%;" fxLayout="row" fxLayoutAlign="space-around center">
 			<div class="boxs">
