--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -97,6 +97,12 @@
 		width: 100%;
 		height: 350px;
 		background-color: #EBE5F5;
+		.places-info{
+			background: url('/assets/images/bg5.1.png') no-repeat center center;
+			border-radius: 8px;
+			width: 40%; 
+			height: 80%;
+		}
 		.boxs{
 			height: 100%;
 			width: 29%;
